fix removal of slide-in overlay on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,14 +61,10 @@ h1 {
 		overflow: hidden;
 }
 
-figure:hover .img-overlay {
-  opacity: 1;
-  left: 0;
-}
-
-@media only handheld and (max-device-width : 600px) {
-	.img-overlay {
-		display: hidden;
+@media only screen and (min-width : 600px) {
+	figure:hover .img-overlay {
+	  opacity: 1;
+	  left: 0;
 	}
 }
 
